--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -69,15 +69,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <SearchView
-            android:id="@+id/searchView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:queryHint="Search by name or number"
-            android:iconifiedByDefault="false"
-            app:layout_constraintEnd_toStartOf="@+id/gd3"
-            app:layout_constraintStart_toStartOf="@+id/gd1"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
@@ -88,7 +79,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_constraintEnd_toEndOf="@id/gd3"
             app:layout_constraintStart_toStartOf="@+id/gd1"
-            app:layout_constraintTop_toBottomOf="@id/searchView" />
+            app:layout_constraintTop_toBottomOf="@id/gd2" />
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
