--- a/app/src/main/res/layout/fragment_history_calls.xml
+++ b/app/src/main/res/layout/fragment_history_calls.xml
@@ -8,49 +8,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <TextView
-            android:id="@+id/txtToday"
+        <SearchView
+            android:id="@+id/searchView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="@dimen/_15sdp"
+            android:queryHint="Search by name or number"
+            android:iconifiedByDefault="false"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="@dimen/_15sdp"
-            android:text="@string/today"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvToday"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/_150sdp"
-            tools:listitem="@layout/history_contact_item_layout"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_8sdp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtToday"/>
-        <TextView
-            android:id="@+id/txtYesterday"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/rvToday"
-            android:layout_marginTop="@dimen/_15sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="@dimen/_15sdp"
-            android:text="@string/yesterday"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvYesterday"
-            android:layout_width="0dp"
+            android:id="@+id/rvCalls"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginEnd="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtYesterday"
-            android:layout_marginBottom="@dimen/_10sdp"
-            tools:listitem="@layout/history_contact_item_layout"/>
+            app:layout_constraintTop_toBottomOf="@id/searchView"
+            tools:listitem="@layout/history_call_item_layout"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
