--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -79,49 +79,17 @@
             app:layout_constraintStart_toStartOf="@+id/gd1"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
-        <TextView
-            android:id="@+id/txtRecents"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/searchView"
-            app:layout_constraintStart_toStartOf="@id/gd1"
-            app:layout_constraintEnd_toEndOf="@id/gd3"
-            android:textSize="@dimen/_20sdp"
-            android:text="@string/recents"
-            android:textStyle="bold"
-            android:layout_marginTop="@dimen/_10sdp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvRecents"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/_110sdp"
-            tools:listitem="@layout/contact_item_layout"
-            app:layout_constraintStart_toStartOf="@id/gd1"
-            android:layout_marginTop="@dimen/_10sdp"
-            app:layout_constraintEnd_toEndOf="@id/gd3"
-            app:layout_constraintTop_toBottomOf="@id/txtRecents"/>
-        <TextView
-            android:id="@+id/txtContacs"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/rvRecents"
-            app:layout_constraintStart_toStartOf="@id/gd1"
-            app:layout_constraintEnd_toEndOf="@id/gd3"
-            android:textSize="@dimen/_20sdp"
-            android:text="@string/contacts"
-            android:textStyle="bold"
-            android:layout_marginTop="@dimen/_10sdp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvContacts"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/_10sdp"
-            app:layout_constraintBottom_toTopOf="@+id/gd4"
-            tools:listitem="@layout/contact_item_layout"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/gd3"
             app:layout_constraintStart_toStartOf="@id/gd1"
-            app:layout_constraintTop_toBottomOf="@id/txtContacs" />
+            app:layout_constraintTop_toBottomOf="@id/searchView"
+            tools:listitem="@layout/contact_item_layout" />
 
         <com.google.android.material.circularreveal.cardview.CircularRevealCardView
             android:id="@+id/cardViewAddContact"
