--- a/app/src/main/res/layout/history_call_item_layout.xml
+++ b/app/src/main/res/layout/history_call_item_layout.xml
@@ -10,9 +10,9 @@
     <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:cardBackgroundColor="#FF2C2C"
-        app:cardCornerRadius="8dp">
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="@android:color/transparent"
+        app:cardCornerRadius="10dp">
 
 
         <LinearLayout
