--- a/app/src/main/res/layout/history_message_item_layout.xml
+++ b/app/src/main/res/layout/history_message_item_layout.xml
@@ -20,8 +20,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="#FF2C2C"
             app:cardCornerRadius="8dp"
+            app:cardBackgroundColor="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
