--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,72 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".HomeFragment">
+    tools:context=".mediaFragments.ImageFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gd1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintGuide_begin="@dimen/_12sdp"
-            android:orientation="vertical"/>
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gd3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="@dimen/_12sdp" />
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gd2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintGuide_begin="@dimen/_12sdp"
-            android:orientation="horizontal"/>
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gd4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintGuide_end="@dimen/_12sdp"
-            android:orientation="horizontal"/>
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@+id/gd3"
-            app:layout_constraintStart_toStartOf="@+id/gd1"
-            app:layout_constraintTop_toTopOf="@id/gd2">
-
-
-            <TextView
-                android:id="@+id/txtHeadMyContacts"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/my_contacts"
-                android:textSize="@dimen/_20ssp"
-                android:textStyle="bold"
-                app:layout_constraintBaseline_toBottomOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/profileImage"
-                android:onClick="toMain"
-                android:layout_width="@dimen/_40sdp"
-                android:layout_height="@dimen/_40sdp"
-                android:src="@drawable/david"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <SearchView
             android:id="@+id/searchView"
@@ -75,45 +14,169 @@
             android:layout_height="wrap_content"
             android:queryHint="Search by name or number"
             android:iconifiedByDefault="false"
-            app:layout_constraintEnd_toStartOf="@+id/gd3"
-            app:layout_constraintStart_toStartOf="@+id/gd1"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvContacts"
+            android:id="@+id/rvMessages"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/gd3"
-            app:layout_constraintStart_toStartOf="@id/gd1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/searchView"
-            tools:listitem="@layout/contact_item_layout" />
+            tools:listitem="@layout/history_message_item_layout"/>
 
-        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
-            android:id="@+id/cardViewAddContact"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="@dimen/_50sdp"
-            app:cardBackgroundColor="@color/black"
-            android:layout_margin="@dimen/_15sdp"
-            app:cardCornerRadius="@dimen/_50sdp"
+        <ProgressBar
+            android:id="@+id/reloadProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" >
-
-            <ImageView
-                android:id="@+id/imgAddContact"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/_4sdp"
-                android:src="@drawable/baseline_add_24"/>
-
-        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
+            app:layout_constraintEnd_toEndOf="@+id/rvMessages"
+            app:layout_constraintStart_toStartOf="@+id/rvMessages"
+            app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
 
-
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/reloadButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:contentDescription="kk"
+            android:src="@drawable/baseline_upload_24"
+            android:scaleType="centerCrop"
+            android:backgroundTint="@color/white"
+            android:layout_marginEnd="@dimen/_20sdp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </layout>
+
+
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    tools:context=".HomeFragment">-->
+
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+
+
+<!--        <androidx.constraintlayout.widget.Guideline-->
+<!--            android:id="@+id/gd1"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintGuide_begin="@dimen/_12sdp"-->
+<!--            android:orientation="vertical"/>-->
+
+<!--        <androidx.constraintlayout.widget.Guideline-->
+<!--            android:id="@+id/gd3"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical"-->
+<!--            app:layout_constraintGuide_end="@dimen/_12sdp" />-->
+<!--        <androidx.constraintlayout.widget.Guideline-->
+<!--            android:id="@+id/gd2"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintGuide_begin="@dimen/_12sdp"-->
+<!--            android:orientation="horizontal"/>-->
+<!--        <androidx.constraintlayout.widget.Guideline-->
+<!--            android:id="@+id/gd4"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintGuide_end="@dimen/_12sdp"-->
+<!--            android:orientation="horizontal"/>-->
+
+
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:id="@+id/constraintLayout"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintEnd_toStartOf="@+id/gd3"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/gd1"-->
+<!--            app:layout_constraintTop_toTopOf="@id/gd2">-->
+
+
+<!--            <TextView-->
+<!--                android:id="@+id/txtHeadMyContacts"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/my_contacts"-->
+<!--                android:textSize="@dimen/_20ssp"-->
+<!--                android:textStyle="bold"-->
+<!--                app:layout_constraintBaseline_toBottomOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/profileImage"-->
+<!--                android:onClick="toMain"-->
+<!--                android:layout_width="@dimen/_40sdp"-->
+<!--                android:layout_height="@dimen/_40sdp"-->
+<!--                android:src="@drawable/david"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--        <SearchView-->
+<!--            android:id="@+id/searchView"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:queryHint="Search by name or number"-->
+<!--            android:iconifiedByDefault="false"-->
+<!--            app:layout_constraintEnd_toStartOf="@+id/gd3"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/gd1"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />-->
+
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/rvContacts"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_marginTop="@dimen/_10sdp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/gd3"-->
+<!--            app:layout_constraintStart_toStartOf="@id/gd1"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/searchView"-->
+<!--            tools:listitem="@layout/contact_item_layout" />-->
+
+<!--        <com.google.android.material.circularreveal.cardview.CircularRevealCardView-->
+<!--            android:id="@+id/cardViewAddContact"-->
+<!--            android:layout_width="@dimen/_50sdp"-->
+<!--            android:layout_height="@dimen/_50sdp"-->
+<!--            app:cardBackgroundColor="@color/black"-->
+<!--            android:layout_margin="@dimen/_15sdp"-->
+<!--            app:cardCornerRadius="@dimen/_50sdp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent" >-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/imgAddContact"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_margin="@dimen/_4sdp"-->
+<!--                android:src="@drawable/baseline_add_24"/>-->
+
+<!--        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>-->
+
+
+
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+<!--</layout>-->
