--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,8 +3,8 @@
 
     <item
         android:id="@+id/navigation_history"
-        android:icon="@drawable/history"
-        android:title="@string/history" />
+        android:icon="@drawable/baseline_perm_media_24"
+        android:title="@string/media" />
 
     <item
         android:id="@+id/navigation_home"
