--- a/app/src/main/res/layout/history_message_item_layout.xml
+++ b/app/src/main/res/layout/history_message_item_layout.xml
@@ -48,7 +48,7 @@
 
                 <TextView
                     android:id="@+id/txtMessage"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/_2sdp"
                     android:ellipsize="end"
@@ -58,7 +58,8 @@
 
                 <TextView
                     android:id="@+id/txtDate"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    android:gravity="end"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:text="@{messageTable.date}"
